third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/bool/bool.stderr
TOML parse error at line 1, column 27
  |
1 | almost-false-with-extra = falsify
  |                           ^
invalid string
expected `"`, `'`
